# bbrief-clickup-webhook

./: README.md  lambda_function.py  main.py  pyproject.toml
artifacts/python/: checksum
artifacts/python/charset_normalizer-3.4.0.dist-info/: RECORD
artifacts/python/greenlet-3.1.1.dist-info/: RECORD
artifacts/python/python_dotenv-1.0.1.dist-info/: RECORD
business/: webhook.py
clickup/: task.py
db/: database.py  event.py  settings.py
